--- a/style.css
+++ b/style.css
@@ -16,4 +16,93 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto';
+  
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#app {
+  height: 100vh;
+  max-height: 640px;
+  width: 100vw;
+  max-width: 360px;
+  background: #ccc;
+  display: flex;
+  flex-direction: column;
+  /* border-radius: 20px; */
+}
+
+#app .display {
+  /* border-radius: 20px 20px 0 0; */
+  background-color: var(--color-primary);
+  width: 100%;
+  height: calc(100% - 440px);
+  display: flex;
+  align-items: flex-end;
+  padding: 20px;
+}
+
+#app .display input {
+  width: 100%;
+  height: 40px;
+  border: 0;
+  background-color: var(--color-primary);
+  color: #fff;
+  text-align: right;
+  outline: 0;
+  font-size: 32px;
+}
+
+#app .controls {
+  /* border-radius: 0 0 20px 20px; */
+  background-color: var(--color-bg-light);
+  width: 100%;
+  height: 440px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  padding: 20px;
+  gap: 20px;
+}
+
+#app .controls .btn {
+  background-color: var(--color-bg-light);
+  box-shadow: 1px 1px 5px rgb(200,200,200);
+  cursor: pointer;
+  border-radius: 50%;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-text-light);
+  font-size: 24px;
+}
+
+#app .controls .actions {
+  background-color: var(--color-button-light);
+  color: #fff;
+}
+
+#app .controls .operator {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+#app .controls .operator-equal {
+  color: var(--color-primary);
+}
+
+@media (max-width: 500px) {
+  #app .controls .btn {
+    cursor: none;
+  }
 }
