--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 #app {
   height: 100vh;
   max-width: 360px;
+  max-height: 640px;
   background: #ccc;
   display: flex;
   flex-direction: column;
@@ -100,11 +101,6 @@ body {
 }
 
 @media (max-width: 720px) {
-  #app {
-    max-width: none;
-    height: 100vh;
-    width: 100vw;
-  }
 
   #app .controls .btn {
     cursor: none;
